@@ -38,7 +38,9 @@ type?topic
    For \code{?} the \code{topic} argument may also be a function call,
    to ask for documentation on a corresponding method: see the section
    on S4 method documentation.  Unlike \code{help}, all names are
-   deparsed to give the desired topic.
+   deparsed to give the desired topic.  The funtion calls
+   \code{pkg::topic} and \code{pkg:::topic} are treated specially, and
+   look for help on \code{topic} in package \pkg{package}.
 
    See \sQuote{Details} for what happens if this is omitted for \code{help}.
  }
